MB-30553: visitDepth: Re-acquire HashTable mutex on each HashBucket

Use the same pattern as visit() / pauseResumeVisit() to minimise impact
on front-end threads.

Change-Id: Ie55f03e734a37f1467afab2872c101adf76a5c8f
Reviewed-on: http://review.couchbase.org/97923
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>